# bashmator

./: .gitignore  LICENSE  README.md  bashmator.py  pyproject.toml  requirements.txt
bones/: config.py  funcs.py  library.py  msg.py  schemas.py  validate.py  yamlscript.py
bshm/: bashmator.py
bshm/bones/: config.py  funcs.py  library.py  msg.py  validate.py  yamlscript.py
