[tool.poetry]
name = "bashmator"
version = "1.1.8"
description = "Console script manager based on YAML format"
authors = ["vinzekatze <vinzekatze@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinzekatze/bashmator"
repository = "https://github.com/vinzekatze/bashmator"
packages = [
    { include = "bshm"}
]
exclude = ["bshm/bones/__pycache__"]


[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pyyaml = "^6.0.1"
appdirs = "^1.4.4"
colorama = "^0.4.6"

[tool.poetry.scripts]
bashmator = 'bshm.bashmator:main'
bshm = 'bshm.bashmator:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
